infrastructure/kubernetes/redis-cip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: e-commerce-store
  labels:
    app: redis
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
